// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GreenFlag renders active state 1`] = `
<img
  className="undefined"
  onClick={[Function]}
  src="test-file-stub"
  title="Go"
/>
`;

exports[`GreenFlag renders inactive state 1`] = `
<img
  className=""
  onClick={[Function]}
  src="test-file-stub"
  title="Go"
/>
`;
